openshift-2/route.yaml
# %APP_NAME%: Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: %APP_NAME%
  name: %APP_NAME%
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: %APP_NAME%
    weight: 100
